welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  if (aSmile){
    if (bSmile){
      reurn true
    }
    else {
      return false
    }
  }else{
    if (bSmile!=true){
      return true
    }
  }
}